--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to 'マイページへ行く',user_path(current_user) %>
+<%= link_to 'ユーザー管理',user_path(current_user) %>
+<br>
+<%= link_to '新規投稿', new_item_path %>
 <div class="content">
   <% @items.each do |item| %> 
 <%# eachメソッドを使うことで、全商品に対して以下の処理を実行します %>
