--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,9 @@
 <h1>新規投稿</h1>
+
+  <%= form_with model: @item, url:items_path, html:{class:"form-signin needs-validation", novalidate:true}, id:"form-signin", local: true  do |f| %>
+    <%= f.text_field :title, placeholder: "タイトル", rows:"1", class:"form-control", id:"", required:true %>
+    <%= f.text_area :text, placeholder: "本文を書く", rows:"10", class:"form-control", id:"", required:true %>
+    <%= f.submit "投稿する", class:"btn btn-lg btn-primary" %>
+  <% end %>
+
 <%= link_to '戻る', root_path %>
